# python-template

./: cookiecutter.json
{{ cookiecutter.project_slug }}/: .gitmessage  .pre-commit-config.yaml  README.md  justfile  pyproject.toml
{{ cookiecutter.project_slug }}/.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
{{ cookiecutter.project_slug }}/.github/workflows/: release-please.yml
{{ cookiecutter.project_slug }}/src/{{ cookiecutter.package_name }}/: __init__.py  main.py  settings.py
{{ cookiecutter.project_slug }}/tests/: test_settings.py
