[project]
name = "{{ cookiecutter.project_name }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.description }}"
readme = "README.md"
requires-python = ">={{ cookiecutter.python_version }}"
authors = [
    {name = "{{ cookiecutter.author_name }}", email = "{{ cookiecutter.author_email }}"}
]

dependencies = [
    "pydantic",
    "pydantic-settings",
]

[dependency-groups]
dev = [
    "basedpyright>=1.34.0",
    "pre-commit>=4.5.0",
    "pytest>=9.0.1",
    "ruff>=0.14.6",
]

[tool.ruff]
target-version = "py{{ cookiecutter.python_version|replace('.', '') }}"
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.basedpyright]
typeCheckingMode = "strict"
pythonVersion = "{{ cookiecutter.python_version }}"
include = ["src"]
venvPath = "."
venv = ".venv"
